syntax = "proto3";
package artery.voting.v1beta1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "artery/voting/v1beta1/types.proto";
import "artery/voting/v1beta1/params.proto";

option go_package = "github.com/arterynetwork/artr/x/voting/types";

service Query {
  rpc History(HistoryRequest) returns (HistoryResponse) {
    option (google.api.http).get = "/artery/voting/v1beta1/history";
  }
  rpc Government(GovernmentRequest) returns (GovernmentResponse) {
    option (google.api.http).get = "/artery/voting/v1beta1/government";
  }
  rpc Current(CurrentRequest) returns (CurrentResponse) {
    option (google.api.http).get = "/artery/voting/v1beta1/current";
  }
  rpc Params(ParamsRequest) returns (ParamsResponse) {
    option (google.api.http).get = "/artery/voting/v1beta1/params";
  }
  rpc Poll(PollRequest) returns (PollResponse) {
    option (google.api.http).get = "/artery/voting/v1beta1/poll";
  }
  rpc PollHistory(PollHistoryRequest) returns (PollHistoryResponse) {
    option (google.api.http).get = "/artery/voting/v1beta1/poll-history";
  }
}

message HistoryRequest {
  int32 limit = 1 [(gogoproto.moretags) = "yaml:\"limit,omitempty\""];
  int32 page  = 2 [(gogoproto.moretags) = "yaml:\"page,omitempty\""];
}

message HistoryResponse {
  repeated ProposalHistoryRecord history = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag)  = "history",
    (gogoproto.moretags) = "yaml:history"
  ];
}

message GovernmentRequest {}

message GovernmentResponse {
  option (gogoproto.goproto_getters) = false;

  repeated string members = 1 [
    (gogoproto.jsontag)  = "members",
    (gogoproto.moretags) = "yaml:\"members\""
  ];
}

message CurrentRequest {}

message CurrentResponse {
  Proposal proposal = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"proposal,omitempty\""
  ];
  repeated string government = 2 [
    (gogoproto.moretags) = "yaml:\"government,omitempty\""
  ];
  repeated string agreed = 3 [
    (gogoproto.moretags) = "yaml:\"agreed,omitempty\""
  ];
  repeated string disagreed = 4 [
    (gogoproto.moretags) = "yaml:\"disagreed,omitempty\""
  ];
}

message ParamsRequest {}

message ParamsResponse {
  Params params = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag)  = "params",
    (gogoproto.moretags) = "yaml:\"params\""
  ];
}

message PollRequest {}

message PollResponse {
  Poll poll = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag)  = "poll,omitempty",
    (gogoproto.moretags) = "yaml:\"poll,omitempty\""
  ];
  uint64 yes = 2 [
    (gogoproto.jsontag)  = "yes,omitempty",
    (gogoproto.moretags) = "yaml:\"yes,omitempty\""
  ];
  uint64 no = 3 [
    (gogoproto.jsontag)  = "no,omitempty",
    (gogoproto.moretags) = "yaml:\"no,omitempty\""
  ];
}

message PollHistoryRequest {
  int32 limit = 1 [
    (gogoproto.jsontag)  = "limit,omitempty",
    (gogoproto.moretags) = "yaml:\"limit,omitempty\""
  ];
  int32 page  = 2 [
    (gogoproto.jsontag)  = "page,omitempty",
    (gogoproto.moretags) = "yaml:\"page,omitempty\""
  ];
}

message PollHistoryResponse {
  repeated PollHistoryItem history = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag)  = "history,omitempty",
    (gogoproto.moretags) = "yaml:\"history,omitempty\""
  ];
}
